feat(api): rumor etc
