# docs/swagger.json
@@ -310,68 +310,6 @@
                 }
             }
         },
-        "/notice/detail": {
-            "post": {
-                "description": "查看单条公告",
-                "tags": [
-                    "公告"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "公告ID",
-                        "name": "notice_id",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"success\":true, \"message\":\"查询成功\",\"data\":\"该条公告的详细信息\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "{\"success\":true, \"message\":\"查询失败，公告ID不存在\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/notice/list_a_question": {
-            "post": {
-                "description": "列出某个问题的详情",
-                "tags": [
-                    "防控知识板块"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "问题ID",
-                        "name": "question_id",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"success\": true, \"message\": \"查看成功\", \"data\": \"某问题的所有信息\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "{\"success\": false, \"message\": \"问题ID不存在\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/notice/list_all_comments": {
             "post": {
                 "description": "列出某个问题的全部评论",
@@ -428,6 +366,115 @@
                 "responses": {
                     "200": {
                         "description": "{\"success\": true, \"message\": \"查看成功\", \"data\": \"全部问题\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/notice/list_all_rumor": {
+            "get": {
+                "description": "获取所有辟谣，返回列表",
+                "tags": [
+                    "公告"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true, \"message\":\"查询成功\",\"data\":\"所有辟谣\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/notice/notice_detail": {
+            "post": {
+                "description": "查看单条公告",
+                "tags": [
+                    "公告"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "公告ID",
+                        "name": "notice_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true, \"message\":\"查询成功\",\"data\":\"该条公告的详细信息\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "{\"success\":true, \"message\":\"查询失败，公告ID不存在\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/notice/question_detail": {
+            "post": {
+                "description": "列出某个问题的详情",
+                "tags": [
+                    "防控知识板块"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "问题ID",
+                        "name": "question_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\": true, \"message\": \"查看成功\", \"data\": \"某问题的所有信息\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "{\"success\": false, \"message\": \"问题ID不存在\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/notice/rumor_detail": {
+            "post": {
+                "description": "查看单条辟谣",
+                "tags": [
+                    "公告"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "辟谣ID",
+                        "name": "rumor_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true, \"message\":\"查询成功\",\"data\":\"该条辟谣的详细信息\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "{\"success\":true, \"message\":\"查询失败，辟谣ID不存在\"}",
                         "schema": {
                             "type": "string"
                         }
